// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentRoute should match snapshot with data object passed 1`] = `
<Switch>
  <Route
    exact={true}
    path="/planets"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/people"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/vehicles"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/favorites"
    render={[Function]}
  />
</Switch>
`;

exports[`ContentRoute should match snapshot without data object passed 1`] = `
<Switch>
  <Route
    exact={true}
    path="/planets"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/people"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/vehicles"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/favorites"
    render={[Function]}
  />
</Switch>
`;

exports[`NavBar should match snapshot when activeButton is favorites 1`] = `
<div
  className="navigation_bar"
>
  <div
    className="planets__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="planets__NAV"
      exact={true}
      name="planets"
      onClick={[Function]}
      to="/planets"
    >
      planets
    </NavLink>
  </div>
  <div
    className="people__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="people__NAV"
      name="people"
      onClick={[Function]}
      to="/people"
    >
      people
    </NavLink>
  </div>
  <div
    className="vehicles__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="vehicles__NAV"
      name="vehicles"
      onClick={[Function]}
      to="/vehicles"
    >
      vehicles
    </NavLink>
  </div>
  <div
    className="favorites__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="favorites__NAV pressed"
      to="/favorites"
    >
      Favorites: 
      0
    </NavLink>
  </div>
</div>
`;

exports[`NavBar should match snapshot when activeButton is people 1`] = `
<div
  className="navigation_bar"
>
  <div
    className="planets__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="planets__NAV"
      exact={true}
      name="planets"
      onClick={[Function]}
      to="/planets"
    >
      planets
    </NavLink>
  </div>
  <div
    className="people__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="people__NAV pressed"
      name="people"
      onClick={[Function]}
      to="/people"
    >
      people
    </NavLink>
  </div>
  <div
    className="vehicles__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="vehicles__NAV"
      name="vehicles"
      onClick={[Function]}
      to="/vehicles"
    >
      vehicles
    </NavLink>
  </div>
  <div
    className="favorites__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="favorites__NAV"
      to="/favorites"
    >
      Favorites: 
      0
    </NavLink>
  </div>
</div>
`;

exports[`NavBar should match snapshot when activeButton is planets 1`] = `
<div
  className="navigation_bar"
>
  <div
    className="planets__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="planets__NAV pressed"
      exact={true}
      name="planets"
      onClick={[Function]}
      to="/planets"
    >
      planets
    </NavLink>
  </div>
  <div
    className="people__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="people__NAV"
      name="people"
      onClick={[Function]}
      to="/people"
    >
      people
    </NavLink>
  </div>
  <div
    className="vehicles__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="vehicles__NAV"
      name="vehicles"
      onClick={[Function]}
      to="/vehicles"
    >
      vehicles
    </NavLink>
  </div>
  <div
    className="favorites__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="favorites__NAV"
      to="/favorites"
    >
      Favorites: 
      0
    </NavLink>
  </div>
</div>
`;

exports[`NavBar should match snapshot when activeButton is vehicles 1`] = `
<div
  className="navigation_bar"
>
  <div
    className="planets__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="planets__NAV"
      exact={true}
      name="planets"
      onClick={[Function]}
      to="/planets"
    >
      planets
    </NavLink>
  </div>
  <div
    className="people__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="people__NAV"
      name="people"
      onClick={[Function]}
      to="/people"
    >
      people
    </NavLink>
  </div>
  <div
    className="vehicles__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="vehicles__NAV pressed"
      name="vehicles"
      onClick={[Function]}
      to="/vehicles"
    >
      vehicles
    </NavLink>
  </div>
  <div
    className="favorites__CONTAINER"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="favorites__NAV"
      to="/favorites"
    >
      Favorites: 
      0
    </NavLink>
  </div>
</div>
`;
